Add API for allowing compatible login with Fitbit.
